# SFML-with-VS-and-CMake-template

./: CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  main.cpp
